menu lleva a perfil y calendario

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         </activity>
         <activity android:name=".HomeActivity"/>
         <activity android:name=".MenuActivity"/>
-        <activity android:name=".LoginActivity"/>
+        <activity android:name=".login.LoginActivity"/>
         <activity android:name=".profile.ProfileEditActivity"/>
         <activity android:name=".profile.ProfileViewActivity"/>
 
