--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,28 +47,27 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
-    implementation 'com.google.firebase:firebase-auth:21.1.0'
+    //implementation 'com.google.firebase:firebase-auth:21.1.0'
 
-    implementation 'com.google.firebase:firebase-admin:9.2.0'
-
+    //implementation 'com.google.firebase:firebase-admin:9.2.0'
 
     // Firebase Authentication (para autenticar usuarios)
-    implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
+    //implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
     // Versión estable para versiones antiguas de Android Studio
 
     // Firebase Firestore (para trabajar con bases de datos Firestore)
-    implementation 'com.google.firebase:firebase-firestore-ktx:24.4.1'
+    //implementation 'com.google.firebase:firebase-firestore-ktx:24.4.1'
     // Versión estable para versiones antiguas de Android Studio
     // Google Play Services para Google Sign-In
-    implementation 'com.google.android.gms:play-services-auth:20.6.0'
+    //implementation 'com.google.android.gms:play-services-auth:20.6.0'
     // Versión compatible con versiones antiguas de Android Studio
 
     // Para usar ActivityResultContracts (para manejo de resultados de Google Sign-In)
     /*implementation 'androidx.activity:activity-ktx:1.3.1' */ // Compatible con versiones antiguas
     // Añade las dependencias de AndroidX Lifecycle
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    /*implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.lifecycle:lifecycle-process:2.5.1'
-    implementation 'androidx.startup:startup-runtime:1.1.1'
+    implementation 'androidx.startup:startup-runtime:1.1.1'*/
 
 
 }
