--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,12 +47,12 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
+    implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
+
     //implementation 'com.google.firebase:firebase-auth:21.1.0'
 
     //implementation 'com.google.firebase:firebase-admin:9.2.0'
 
-    // Firebase Authentication (para autenticar usuarios)
-    //implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
     // Versión estable para versiones antiguas de Android Studio
 
     // Firebase Firestore (para trabajar con bases de datos Firestore)
