--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.XOAgenda"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".login.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,9 +23,6 @@
         </activity>
         <activity android:name=".HomeActivity"/>
         <activity android:name=".MenuActivity"/>
-        <activity android:name=".login.LoginActivity"/>
-        <activity android:name=".profile.ProfileEditActivity"/>
-        <activity android:name=".profile.ProfileViewActivity"/>
 
     </application>
 
