--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         </activity>
         <activity android:name=".HomeActivity"/>
         <activity android:name=".MenuActivity"/>
+        <activity android:name=".MainActivity"/>
 
     </application>
 
