--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,15 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
     dependencies {
+        // Dependencia para el plugin de Google Services
         classpath 'com.google.gms:google-services:4.3.14'
     }
 }
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 plugins {
     id 'com.android.application' version '8.0.2' apply false
     id 'com.android.library' version '8.0.2' apply false
