en editar perfil se puede editar el nombre y telefono, en el menu ya sale el nombre y email del usuario

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
     implementation 'com.google.firebase:firebase-auth:21.0.1'
     implementation 'com.google.firebase:firebase-firestore-ktx:24.4.0'
+    implementation 'com.google.android.gms:play-services-auth:20.7.0'
 
     //implementation 'com.google.firebase:firebase-auth:21.1.0'
 
