--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -44,6 +47,9 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".AlertFragment"
             android:screenOrientation="portrait"/>
+        <receiver android:name=".ReminderReceiver"
+            android:screenOrientation="portrait"/>
+
 
     </application>
 
