--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,3 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
         google()
@@ -7,6 +6,8 @@ buildscript {
     dependencies {
         // Dependencia para el plugin de Google Services
         classpath 'com.google.gms:google-services:4.3.14'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.20'
+        classpath 'com.android.tools.build:gradle:8.0.2'
     }
 }
 
@@ -14,4 +15,7 @@ plugins {
     id 'com.android.application' version '8.0.2' apply false
     id 'com.android.library' version '8.0.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
+    // Otros plugins a nivel de proyecto si los tienes
 }
+
+
