--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,16 @@ android {
         jvmTarget = '1.8'
     }
 
-
+    packagingOptions {
+        resources {
+            excludes += [
+                    '/META-INF/INDEX.LIST',
+                    '/META-INF/DEPENDENCIES',
+                    '/META-INF/NOTICE',
+                    '/META-INF/LICENSE'
+            ]
+        }
+    }
 }
 
 dependencies {
@@ -52,10 +61,21 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx:24.4.0'
     implementation 'com.google.android.gms:play-services-auth:20.7.0'
     implementation 'com.prolificinteractive:material-calendarview:1.4.3'
-    implementation 'com.github.bumptech.glide:glide:4.15.1' // O la última versión estable
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1' // Misma versión que la anterior
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
-
-
-
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation platform('com.google.firebase:firebase-bom:33.1.0')
+    implementation 'com.google.firebase:firebase-functions'
+    implementation 'com.google.firebase:firebase-functions-ktx'
+    implementation 'com.google.apis:google-api-services-calendar:v3-rev20240328-2.0.0'
+    implementation 'com.google.api-client:google-api-client-android:1.34.0'
+    implementation 'com.google.api-client:google-api-client-gson:1.34.0'
+    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
+    implementation 'com.google.http-client:google-http-client-gson:1.43.0'
+    implementation 'com.google.http-client:google-http-client:1.43.0'
+    implementation 'com.google.http-client:google-http-client-android:1.43.0'
+    implementation 'com.google.api-client:google-api-client-android:1.34.0'
+    implementation 'com.google.android.gms:play-services-auth:20.7.0'
+    implementation 'com.google.code.gson:gson:2.10.1'
 }
