--- a/build.gradle
+++ b/build.gradle
@@ -4,14 +4,16 @@ buildscript {
         mavenCentral()
     }
     dependencies {
+        classpath 'com.android.tools.build:gradle:7.3.1'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.10'
         classpath 'com.google.gms:google-services:4.3.14'
     }
 }
 
 plugins {
+    // Estos plugins quedan en modo 'apply false' porque
+    // se aplican luego en los build.gradle de cada módulo.
     id 'com.android.application' version '8.0.2' apply false
-    id 'com.android.library' version '8.0.2' apply false
+    id 'com.android.library'     version '8.0.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
 }
-
-
